{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 52,
  "lineage": "29312b66-ba87-c33d-68b3-03bf6462deb2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb-project01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:loadbalancer/app/node-test1-alb-qa/d5f725758ab67e78",
            "arn_suffix": "app/node-test1-alb-qa/d5f725758ab67e78",
            "dns_name": "node-test1-alb-qa-2093964478.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:543745842878:loadbalancer/app/node-test1-alb-qa/d5f725758ab67e78",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "node-test1-alb-qa",
            "security_groups": [
              "sg-01e1b217e9999cb9c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f51da334f825a9d"
              },
              {
                "subnet_id": "subnet-0b15545a362ebebef"
              }
            ],
            "subnets": [
              "subnet-04f51da334f825a9d",
              "subnet-0b15545a362ebebef"
            ],
            "vpc_id": "vpc-0b86cf9c2fca819e7",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.sg-alb-project01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:listener/app/node-test1-alb-qa/d5f725758ab67e78/9f36bd919de37fa4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:targetgroup/node-test1-tg-qa/b204b0e66942a236",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:543745842878:listener/app/node-test1-alb-qa/d5f725758ab67e78/9f36bd919de37fa4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:loadbalancer/app/node-test1-alb-qa/d5f725758ab67e78",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb-project01",
            "aws_alb_target_group.tg-project01",
            "aws_security_group.sg-alb-project01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tg-project01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:targetgroup/node-test1-tg-qa/b204b0e66942a236",
            "arn_suffix": "targetgroup/node-test1-tg-qa/b204b0e66942a236",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/backend-status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:543745842878:targetgroup/node-test1-tg-qa/b204b0e66942a236",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "node-test1-tg-qa",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "tg-project01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:543745842878:targetgroup/node-test1-tg-qa/b204b0e66942a236-20210126195429664900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:targetgroup/node-test1-tg-qa/b204b0e66942a236",
            "target_id": "i-0bf0a8e31232bb439"
          },
          "dependencies": [
            "aws_alb_target_group.tg-project01",
            "aws_instance.project01",
            "aws_security_group.sg-project01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "project01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a741b782c2c8632d",
            "arn": "arn:aws:ec2:us-west-1:543745842878:instance/i-0bf0a8e31232bb439",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "glr-Role-S3Apps",
            "id": "i-0bf0a8e31232bb439",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "glr-gitlab-qa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01f21092788498640",
            "private_dns": "ip-10-0-20-216.us-west-1.compute.internal",
            "private_ip": "10.0.20.216",
            "public_dns": "ec2-54-177-141-25.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.141.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-1:543745842878:key/ae2a147e-9fc8-476f-a3fe-81b2b749ab11",
                "tags": {
                  "Name": "node-test1-qa"
                },
                "throughput": 0,
                "volume_id": "vol-0a2cf402532139ac7",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b15545a362ebebef",
            "tags": {
              "Name": "node-test1-qa"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04a8e5a0b5477424c"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-project01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb-project01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:543745842878:security-group/sg-01e1b217e9999cb9c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e1b217e9999cb9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "190.236.198.58/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "190.236.198.58/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "node-test1-sg-alb-qa",
            "name_prefix": "",
            "owner_id": "543745842878",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-project01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:543745842878:security-group/sg-04a8e5a0b5477424c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a8e5a0b5477424c",
            "ingress": [
              {
                "cidr_blocks": [
                  "190.236.198.58/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "190.236.198.58/32"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "190.236.198.58/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "190.236.198.58/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01e1b217e9999cb9c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "node-test1-sg-qa",
            "name_prefix": "",
            "owner_id": "543745842878",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-alb-project01"
          ]
        }
      ]
    }
  ]
}